src/test/ui/parser/issue-21146.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/auxiliary/issue-21146-inc.rs:3:1
   |
LL | parse_error
   | ^^^^^^^^^^^ expected one of `!` or `::`

error: aborting due to previous error

